feat: Add detection order
